@@ -1,3 +1,9 @@
+2010-01-06  Sam Weinig  <sam@webkit.org>
+
+        Attempt to fix non-Snow Leopard Mac build.
+
+        * WebCoreSupport/WebFrameLoaderClient.mm:
+
 2010-01-06  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Eric Carlson.
